tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__NITROCetaneBoost-AAAAAAAAAAAAAAAAAAACLQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 557,
  "prerequisites": [
    549,
    841
  ],
  "properties": {
    "auto_claim": false,
    "desc": "1,000,000 EU per cell, way more dense than before. Yes, yes, this is very good! Make some cetane-boosted diesel fuel and power your Combustion Engine with it.\n\n[note]BTW HOG is a different path, so you'll need to completely redo your setup if you want that in EV.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lNITRO! (Cetane-Boosted Diesel)",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    549,
    841
  ],
  "rewards": [],
  "tasks": []
}
