tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__NORandNANDChips-AAAAAAAAAAAAAAAAAAAE1w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1239,
  "prerequisites": [
    772,
    1236,
    1238,
    940
  ],
  "properties": {
    "auto_claim": false,
    "desc": "NAND is used for data sticks, data orbs, and UV circuits. NOR chips are needed for data orbs and LuV circuits. You can get these by cutting NAND and NOR wafers. Just worry about the data sticks for now.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lNOR and NAND Chips",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    772,
    1236,
    1238,
    940
  ],
  "rewards": [],
  "tasks": []
}
