tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__NaK-wLYoO7hsT_SOuJGzbgDMhg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 13289084511699651718,
  "prerequisites": [
    2236957356656069826
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Let's make some NaK coolant!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lNaK",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2236957356656069826
  ],
  "rewards": [],
  "tasks": []
}
