tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__NitricAcid-AAAAAAAAAAAAAAAAAAADUw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 851,
  "prerequisites": [
    853,
    846
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Nitric acid can be made out of water, oxygen and nitrogen dioxide.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lNitric Acid",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    853,
    846
  ],
  "rewards": [],
  "tasks": []
}
