tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__PetriDishesNotfo-AAAAAAAAAAAAAAAAAAAKBw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2567,
  "prerequisites": [
    2566
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You'll need petri dishes to hold the cultures. You can make them out of borosilicate, styrene, or PTFE.\n\nThe petri dishes must then be sterilized to allow cultures to grow on them. You can use ethanol, methanol, ammonia, or chlorine to sterilize them.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lPetri Dishes, Not for Eating",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2566
  ],
  "rewards": [],
  "tasks": []
}
